--- a/phase2/Makefile
+++ b/phase2/Makefile
@@ -1,9 +1,6 @@
-obj-m := project2.o
-
+obj-m := phase2.o
 KDIR := /lib/modules/$(shell uname -r)/build
-
 PWD := $(shell pwd)
-
 all:
 	$(MAKE) -C $(KDIR) M=$(PWD) modules
 clean:
